fix jumping page on display_route and comparison

--- a/e_metrobus/static/sass/_layout.scss
+++ b/e_metrobus/static/sass/_layout.scss
@@ -36,7 +36,7 @@ $top-bar-height: 2.8rem;
 	}
 	&.l-scroll--nofooter {
 		.main-content {
-			height: calc(100vh - #{$top-bar-height});
+			height: calc(100% - #{$top-bar-height});
 			margin-bottom: 0;
 		}
 		section.footer {
